# KalmanCVE

./: .gitignore  Kalman_2023.ipynb  Kalman_2024.ipynb  Kalman_2025.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: Update Report.yml  forecast.yml
notebooks/: Kalman_2023.ipynb  Kalman_2024.ipynb
src/kalmancve/: __init__.py  cli.py  config.py  data.py  forecast.py  plot.py  report.py
tests/: conftest.py  test_cli.py  test_data.py  test_forecast.py  test_report.py
