[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalmancve"
version = "1.0.0"
description = "Forecast CVE counts using Kalman Filter on NVD data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Jerry Gamblin" },
]
dependencies = [
    "click>=8.1",
    "darts>=0.28.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
]

[project.scripts]
kalmancve = "kalmancve.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
